# UDP-Benchmarking-Engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  run_4_exchanges.sh  run_benchmark.sh  run_redis.sh  run_server.sh
ESP32/: .env.example  CMakeLists.txt
ESP32/main/: CMakeLists.txt  udp_benchmark_main.c  udp_benchmark_main.cpp
Server/: coreserver.cpp  main.cpp  packetProcessing.cpp
src/apps/: marketdata_client.cpp  marketdata_server.cpp
src/marketdata/: FeedConfig.h  Packet.h  RedisClient.h  SpscRing.h
tests/: packet_tests.cpp  redis_command_tests.cpp  ring_buffer_tests.cpp
